added final main page

--- a/UNKILL/src/pages/index.pug
+++ b/UNKILL/src/pages/index.pug
@@ -3,6 +3,7 @@ include ../components/mixins/btn
 include ../components/mixins/aboutCard
 include ../components/mixins/numberCard
 include ../components/mixins/bookCard
+include ../components/mixins/tag
 
 +page(null, 'Главная', 'index-page')
    section.hero-about.section
@@ -46,7 +47,8 @@ include ../components/mixins/bookCard
                .swiper-slide.book-slide 
                   +bookCard(false, '5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
                .swiper-slide.book-slide.book-slide--center
-                  a.btn.book-btn-slider(href="/") Смотреть всё →
+                  span.btn.book-slide-btn →
+                  a.book-slide-link(href="/") Смотреть все
          .el-center
             a.btn.book-btn(href="/") Смотреть всё →
    section.section.blue
@@ -92,3 +94,59 @@ include ../components/mixins/bookCard
                span.hac__number 5.2.5
          .el-center
             a.btn.btn--transparent.hac-btn(href="/") На сайт ВАК
+   section.section
+      .container
+         h2.section__title Тематическая направленность
+         .tags
+            .tags__block.tags__block--mb.tags__block--up
+               h3.tags__title Страховое дело
+               .tags__flex
+                  +tag('Общая теория страхования и перестрахования', true)
+                  +tag('Социально-политические и экономические уязвимости', true)
+                  +tag('Организация страхового дела', true)
+                  +tag('Страховое посредничество', true)
+                  +tag('Взаимное страхование', true)
+                  +tag('Общая теория страхования и перестрахования', true)
+                  +tag('Социально-политические и экономические уязвимости', true)
+                  +tag('Организация страхового дела', true)
+                  +tag('Страховое посредничество', true)
+                  +tag('Взаимное страхование', true)
+                  .el-center.tags__el-center
+                     +btn('tags__btn tags__btn--up btn--grey') Смотреть далее
+            .tags__block.tags__block--down
+               h3.tags__title Управление риском
+               .tags__flex
+                  +tag('Общая теория страхования и перестрахования', false)
+                  +tag('Социально-политические и экономические уязвимости', false)
+                  +tag('Организация страхового дела', false)
+                  +tag('Страховое посредничество', false)
+                  +tag('Взаимное страхование', false)
+                  +tag('Общая теория страхования и перестрахования', false)
+                  +tag('Социально-политические и экономические уязвимости', false)
+                  +tag('Организация страхового дела', false)
+                  +tag('Страховое посредничество', false)
+                  +tag('Взаимное страхование', false)
+                  .el-center.tags__el-center
+                     +btn('tags__btn tags__btn--down btn--grey') Смотреть далее
+   section.section
+         .article-card
+            svg.article-card__icon(width="43" height="16" viewBox="0 0 43 16")
+               use(xlink:href="#doubleArrow")
+            h3.article-card__title Огромных возможностей страхования не знают ни президент, ни премьер, ни Дума. К великому сожалению!
+            p.article-card__dscr В редакцию нашего журнала поступает большое количество вопросов о судьбах отечественного страхования. Мы сформулировали наиболее важные и острые вопросы и попросили ответить на Рустема Турсуновича Юлдашева.
+         .container
+            .article
+               h3.article__title Короли знают о делах своих министров не больше, чем рогоносцы о делах своих жен
+               p.article__quote Вольтер
+               .article__body
+                  p.article__text.article__text--italics СД.: Предлагаем дать нашей дискуссии такое интригующее название, не возражаете?
+                  p.article__text Р.Ю.: Не возражаю, тем более оно отражает состояние отечественного страхового рынка, его неиспользованные возможности. Считаю, что наш страховой рынок настолько недооценен, что просто диву даешься. Если посмотреть статистику развитых стран, то у них доля страхования в ВВП от 6–7% до 15–16%. При наших 1,5–2,0 процентах — разве это не безобразие? Остается только сетовать, что отечественные лидеры государства, экономики и общества не имеют сколько-нибудь серьезного представления о возможностях страхования для процветания нашей страны. Ищут резервы, а они-то под ногами: наклонись и подними!
+                  p.article__text.article__text--italics СД.: Откуда же взяться этим знаниям: все мы вышли из советской политэкономии.
+                  p.article__text Р.Ю.: Действительно, в тех советских учебниках политэкономии почти не было информации о страховом бизнесе. Сам, будучи выпускником экономического факультета МГУ, не помню, чтобы сколько-нибудь серьезно изучали страхование. Разве только финансовые институты много лучше давали знания о страховании, поскольку готовили специалистов для Госстраха. Но это в прошлом, пора уже в современном страховании разбираться.
+                  .gradient
+                     p.article__text.article__text--italics СД.: Однако если взять нашу статистику доходов от страхования, то налог на прибыль в размере 300–400 млн рублей в год вряд ли можно назвать интересной и перспективной для процветания цифрой.
+                     p.article__text Р.Ю.: Все можно изменить, если включить организационный ресурс на уровне страны. Причем по всем основным параметрам ветвей власти: законодательной, исполнительной и судебной. Все можно изменить и довольно быстро решить многие проблемы, в том числе и растущего бюджетного дефицита.
+                  .el-center.article__el-center
+                     a.article__btn.btn(href="/") Читать далее
+   section.section--last-mb
+      img.blue-wave(src="./assets/images/blue-wave-bg.jpg", alt="Волна")
