--- a/UNKILL/src/styles/components/header.scss
+++ b/UNKILL/src/styles/components/header.scss
@@ -13,29 +13,7 @@
 
   &__link,
   .burger-menu__link {
-    font-size: inRem(20);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%;
-    color: var(--black);
-    transition: color .25s ease-in-out;
-
-    &:not(:last-child) {
-      margin-right: inRem(32);
-    }
-
-    &:hover {
-      color: var(--main);
-    }
-
-    &:focus {
-      color: var(--main);
-      outline: none;
-    }
-
-    &:active {
-      color: var(--main-active);
-    }
+    @include nav-link;
   }
 
   &__shop,
