added contact and article page

--- a/UNKILL/src/components/header.pug
+++ b/UNKILL/src/components/header.pug
@@ -2,7 +2,7 @@ include ../components/mixins/btn
 
 header.header
     .container.header__container
-        a.header__logo-link(href="#")
+        a.header__logo-link(href="./index.html")
             svg.header__logo-icon(width="169" height="25" viewBox="0 0 169 25")
                 use(xlink:href="#logo")
         nav.header__nav
@@ -26,9 +26,9 @@ header.header
             svg.burger-menu__icon.close(width="24" height="20" viewBox="0 0 24 20")
                 use(xlink:href="#close")
             nav.burger-menu__links
-                a.burger-menu__link(href="#") Журналы
-                a.burger-menu__link(href="#") Авторам
-                a.burger-menu__link(href="#") Контакты
+                a.burger-menu__link(href="./journal.html") Журналы
+                a.burger-menu__link(href="./author.html") Авторам
+                a.burger-menu__link(href="./contact.html") Контакты
             .burger-menu__shop
                 svg.header__shop-icon(width="32" height="33" viewBox="0 0 32 33")
                     use(xlink:href="#shop")
