--- a/UNKILL/src/pages/index.pug
+++ b/UNKILL/src/pages/index.pug
@@ -100,32 +100,36 @@ include ../components/mixins/tag
          .tags
             .tags__block.tags__block--mb.tags__block--up
                h3.tags__title Страховое дело
-               .tags__flex
+               .tags__grid
                   +tag('Общая теория страхования и перестрахования', true)
-                  +tag('Социально-политические и экономические уязвимости', true)
+                  +tag('Формы и виды страхования', true)
                   +tag('Организация страхового дела', true)
-                  +tag('Страховое посредничество', true)
-                  +tag('Взаимное страхование', true)
-                  +tag('Общая теория страхования и перестрахования', true)
+                  +tag('Взаимное страхование;', true)
+                  +tag('Страховое посредничество;', true)
+                  +tag('Страховое право', true)
+                  +tag('Финансовая устойчивость страховой организации', true)
+                  +tag('Актуарные расчеты', true)
+                  +tag('Страховые продукты;', true)
+                  +tag('Страхование в системе управления рисками', true)
+                  +tag('Мировой страховой рынок', true)
+                  +tag('Теоретико-методологические проблемы социологии риска', true)
+                  +tag('Управление рисками социокультурного развития России', true)
+                  +tag('Мировое общество риска', true)
                   +tag('Социально-политические и экономические уязвимости', true)
-                  +tag('Организация страхового дела', true)
-                  +tag('Страховое посредничество', true)
-                  +tag('Взаимное страхование', true)
                   .el-center.tags__el-center
                      +btn('tags__btn tags__btn--up btn--grey') Смотреть далее
             .tags__block.tags__block--down
                h3.tags__title Управление риском
-               .tags__flex
-                  +tag('Общая теория страхования и перестрахования', false)
+               .tags__grid
+                  +tag('Общая теория рисков и управления ими', false)
+                  +tag('Страхование в системе управления рисками', false)
+                  +tag('Оценка риска', false)
+                  +tag('Управление рисками и экономическая безопасность', false)
+                  +tag('Советы риск-менеджера', false)
+                  +tag('Теоретико-методологические проблемы социологии риска', false)
+                  +tag('Управление рисками социокультурного развития России', false)
+                  +tag('Мировое общество риска', false)
                   +tag('Социально-политические и экономические уязвимости', false)
-                  +tag('Организация страхового дела', false)
-                  +tag('Страховое посредничество', false)
-                  +tag('Взаимное страхование', false)
-                  +tag('Общая теория страхования и перестрахования', false)
-                  +tag('Социально-политические и экономические уязвимости', false)
-                  +tag('Организация страхового дела', false)
-                  +tag('Страховое посредничество', false)
-                  +tag('Взаимное страхование', false)
                   .el-center.tags__el-center
                      +btn('tags__btn tags__btn--down btn--grey') Смотреть далее
    section.section
@@ -147,6 +151,6 @@ include ../components/mixins/tag
                      p.article__text.article__text--italics СД.: Однако если взять нашу статистику доходов от страхования, то налог на прибыль в размере 300–400 млн рублей в год вряд ли можно назвать интересной и перспективной для процветания цифрой.
                      p.article__text Р.Ю.: Все можно изменить, если включить организационный ресурс на уровне страны. Причем по всем основным параметрам ветвей власти: законодательной, исполнительной и судебной. Все можно изменить и довольно быстро решить многие проблемы, в том числе и растущего бюджетного дефицита.
                   .el-center.article__el-center
-                     a.article__btn.btn(href="/") Читать далее
+                     a.article__btn.btn(href="./article.html") Читать далее
    section.section--last-mb
       img.blue-wave(src="./assets/images/blue-wave-bg.jpg", alt="Волна")
