--- a/UNKILL/src/pages/author.pug
+++ b/UNKILL/src/pages/author.pug
@@ -1,4 +1,5 @@
 include ../components/mixins/page
+include ../components/mixins/btn
 include ../components/mixins/editionCard
 
 +page('author', 'Автору', 'author-page')
@@ -57,4 +58,69 @@ include ../components/mixins/editionCard
                     +editionCard('11', 'Акимов Валерий Александрович', 'Профессор, начальник Всероссийского научно-исследовательского института по проблемам гражданской обороны и чрезвычайных ситуаций МЧС России.')
                     +editionCard('12', 'Лесных Валерий Витальевич', 'Профессор, директор Центра анализа рисков, управления промышленной безопасностью и гражданской защитой, ООО «Газпром ВНИИГАЗ».')
 
-                   
+    section.documents
+        .container
+            .documents__block
+                .documents__header
+                    h2.documents__main-title Правила рецензирования
+                    .documents__download
+                        svg.documents__icon(width="19" height="19" viewBox="0 0 19 19")
+                            use(xlink:href="#download")
+                        a.documents__link(href="/" download) Скачать документ
+                .documents__body
+                    h3.documents__title Общие положения
+                    ol.documents__list.list-reset
+                        li.documents__item 1. Процедура рецензирования статей, поступивших в редакцию издательства «Анкил», направлена на обеспечение качества публикуемых в журналах статей. Рецензирование проходят все статьи, поступившие в редакцию для опубликования. При поступлении рукописи статьи в редакцию все авторы предупреждаются о процедуре рецензирования.
+                        li.documents__item 2. Рецензия должна обеспечивать всестороннюю и объективную оценку, анализ достоинств и недостатков представленной статьи.
+                        .gradient
+                            li.documents__item 3. Рецензенты издательства «Анкил» являются признанными специалистами по тематике рецензируемых материалов и имеют публикации по тематике рецензируемой статьи в течение последних трёх лет. К рецензированию привлекаются как члены редакционного совета журнала, так и сторонние рецензенты, как правило, имеющие учёную степень кандидата или доктора наук, обладающие достаточным опытом научной работы по заявленному в статье научному направлению, знакомые с требованиями, предъявляемыми редакцией журнала к публикуемым материалам. Фамилии и место работы рецензентов редакцией не разглашаются.
+                            li.documents__item 4. Процедура рецензирования статей, поступивших в редакцию издательства «Анкил», направлена на обеспечение качества публикуемых в журналах статей. Рецензирование проходят все статьи, поступившие в редакцию для опубликования. При поступлении рукописи статьи в редакцию все авторы предупреждаются о процедуре рецензирования.
+                        .el-center.documents__el-center
+                            +btn('documents__btn btn--grey') Читать далее
+            .documents__block
+                .documents__header
+                    h2.documents__main-title Система качества издательства 
+                    .documents__download
+                        svg.documents__icon(width="19" height="19" viewBox="0 0 19 19")
+                            use(xlink:href="#download")
+                        a.documents__link(href="/" download) Скачать документ
+                .documents__body
+                    h3.documents__title Общие положения
+                    .documents__text-block
+                        p.documents__item Общество с ограниченной ответственностью «АНКИЛ» 
+                        p.documents__item Утверждаю 
+                        p.documents__item.documents__item--mb Генеральный директор ООО «АНКИЛ» Юлдашев Р.Т. «30» мая 2016 г.
+                        p.documents__item РУКОВОДСТВО ПО КАЧЕСТВУ(новая редакция)г. Москва Юридический статусООО «Анкил» имеет статус юридического лица и организационную структуру, соответствующую требованиям действующего законодательства.Организационно-правовая форма: Общество с ограниченной ответственностью.Полное наименование: Общество с ограниченной ответственностью «Анкил». Сокращенное наименование: ООО «Анкил». Местонахождение, реквизиты и контакты ankil.info/15.html1. Управление Руководством по качеству
+                    ol.documents__list.list-reset
+                        .gradient
+                            li.documents__item 1. За разработку и внесение изменений в «Руководстве по качеству» несет ответственность заместитель генерального директора ООО «Анкил».
+                            li.documents__item 2. «Руководство по качеству» утверждается Генеральным директором ООО «Анкил» и вводится в действие приказом по организации.
+                            li.documents__item 3. Все экземпляры «Руководства по качеству» пронумерованы, зарегистрированы и выдаются под роспись.
+                            li.documents__item 4. Все экземпляры «Руководства по качеству» пронумерованы, зарегистрированы и выдаются под роспись.
+                            li.documents__item 5. Все экземпляры «Руководства по качеству» пронумерованы, зарегистрированы и выдаются под роспись.
+                        .el-center.documents__el-center
+                            +btn('documents__btn btn--grey') Читать далее
+            .documents__last-block
+                .documents__header
+                    h2.documents__main-title Этические принципы
+                    .documents__download
+                        svg.documents__icon(width="19" height="19" viewBox="0 0 19 19")
+                            use(xlink:href="#download")
+                        a.documents__link(href="/" download) Скачать документ
+                .documents__body
+                    h3.documents__title Основные принципы
+                    ol.documents__list.list-reset
+                        li.documents__item 1. Этические нормы редакции. Редакционная команда журнала в своей деятельности руководствуется принципами научности, объективности, профессионализма, беспристрастности.
+                        li.documents__item 2. Ответственность за соблюдение этических норм. Исследователи, авторы, редакторы, рецензенты и издатели несут этические обязательства в отношении публикации и распространения результатов научного исследования.
+                        .gradient
+                            li.documents__item 3. Нормы общения с авторами. Взаимодействие с авторами основывается на принципах справедливости, вежливости, объективности, честности и прозрачности.
+                            li.documents__item 4. Наличие института рецензирования. Все содержание журнала, кроме рекламных и редакционных материалов, четко обозначенных как таковые, проходит обязательное рецензирование независимыми экспертами (открытое, слепое, двойное слепое). Предпочтительным является двойное слепое рецензирование.
+                            li.documents__item 5. Доступ к публикациям. Журналы гарантируют доступ к публикациям, обеспечивая хранение материалов в ведущих библиотеках
+                            li.documents__item 6. Доступ к публикациям. Журналы гарантируют доступ к публикациям, обеспечивая хранение материалов в ведущих библиотеках
+                            li.documents__item 7. Доступ к публикациям. Журналы гарантируют доступ к публикациям, обеспечивая хранение материалов в ведущих библиотеках
+                        .el-center.documents__el-center
+                            +btn('documents__btn btn--grey') Читать далее
+                
+
+
+
