--- a/UNKILL/src/styles/components/editionCard.scss
+++ b/UNKILL/src/styles/components/editionCard.scss
@@ -2,6 +2,7 @@
     @include flex-row;
     padding: inRem(20);
     background-color: var(--white);
+    border-radius: inRem(30);
 
     &__picture {
         margin-right: inRem(18);
@@ -27,5 +28,20 @@
         font-weight: 400;
         line-height: 140%;
         color: var(--grey);
+    }
+
+    @include e-md {
+        flex-direction: column;
+        align-items: stretch;
+
+        &__img {
+            width: 100%;
+        }
+
+        &__picture {
+            max-width: 100%;
+            margin-right: 0;
+            margin-bottom: inRem(18);
+        }
     }
 }
