--- a/UNKILL/src/styles/components/tag.scss
+++ b/UNKILL/src/styles/components/tag.scss
@@ -1,11 +1,14 @@
 .tag-block {
-    max-width: inRem(580);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: inRem(23) inRem(20);
     background-color: var(--white);
     border-radius: inRem(50);
+    text-align: center;
 
     &--active {
-        display: block;
+        display: flex;
     }
 
     &--opacity {
@@ -18,5 +21,11 @@
         font-weight: 400;
         line-height: 140%;
         color: var(--black);
+    }
+
+    @include xs {
+        &__text {
+            font-size: inRem(18);
+        }
     }
 }
