--- a/UNKILL/src/styles/pages/author.scss
+++ b/UNKILL/src/styles/pages/author.scss
@@ -2,6 +2,16 @@
     padding-top: inRem(138);
     padding-bottom: inRem(200);
     background-color: var(--bg);
+
+    @include e-md {
+        padding-top: inRem(80);
+        padding-bottom: inRem(150);
+    }
+
+    @include xs {
+        padding-top: inRem(50);
+        padding-bottom: inRem(110);
+    }
 }
 
 .text {
@@ -80,6 +90,144 @@
 
         &__warning__dscr {
             font-size: inRem(18);
+        }
+    }
+}
+
+.edition {
+    margin-bottom: inRem(150);
+
+    &__main-title {
+        margin-bottom: inRem(44);
+        font-size: inRem(40);
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: inRem(0.4);
+        color: var(--black);
+    }
+
+    &__title {
+        margin-bottom: inRem(24);
+        font-size: inRem(24);
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: inRem(0.24);
+        color: var(--black);
+    }
+
+    &__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: inRem(24);
+        margin-bottom: inRem(60);
+    }
+
+    @include e-md {
+        margin-bottom: inRem(80);
+    }
+
+    @include s {
+        &__grid {
+            grid-template-columns: 1fr;
+        }
+    }
+
+    @include xxs {
+        margin-bottom: inRem(60);
+
+        &__main-title {
+            font-size: inRem(32);
+        }
+    }
+}
+
+.documents {
+
+    &__block {
+        margin-bottom: inRem(65);
+        padding-bottom: inRem(110);
+        border-bottom: inRem(1) solid var(--grey);
+    }
+
+    &__header {
+        @include flex-row;
+        justify-content: space-between;
+        margin-bottom: inRem(55);
+    }
+
+    &__main-title {
+        font-size: inRem(50);
+        font-weight: 700;
+        line-height: 110%;
+        letter-spacing: inRem(-1);
+        color: var(--black);
+    }
+
+    &__download {
+        @include flex-row;
+    }
+
+    &__icon {
+        margin-right: inRem(12);
+    }
+
+    &__link {
+        font-size: inRem(18);
+        font-weight: 500;
+        line-height: normal;
+        color: var(--main);
+    }
+
+    &__body {
+        max-width: inRem(800);
+        margin: 0 auto;
+    }
+
+    &__title {
+        margin-bottom: inRem(25);
+        font-size: inRem(24);
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: inRem(0.24);
+        color: var(--black);
+    }
+
+    &__list {
+        position: relative;
+    }
+
+    &__item {
+        font-size: inRem(20);
+        font-weight: 400;
+        line-height: 140%;
+        color: var(--black);
+
+        &:not(:last-child) {
+            margin-bottom: inRem(10);
+        }
+    }
+
+    &__el-center {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: inRem(-25);
+    }
+
+    @include e-md {
+        &__header {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__main-title {
+            margin-bottom: inRem(36);
+        }
+    }
+
+    @include xs {
+        &__main-title {
+            font-size: inRem(32);
         }
     }
 }
