--- a/UNKILL/src/styles/pages/index.scss
+++ b/UNKILL/src/styles/pages/index.scss
@@ -295,10 +295,11 @@
         color: var(--black);
     }
 
-    &__flex {
-        display: flex;
+    &__grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: 1fr;
         position: relative;
-        flex-wrap: wrap;
         gap: inRem(20);
     }
 
