added finish layout

--- a/UNKILL/src/components/header.pug
+++ b/UNKILL/src/components/header.pug
@@ -12,7 +12,7 @@ header.header
         .header__shop
             svg.header__shop-icon(width="32" height="33" viewBox="0 0 32 33")
                 use(xlink:href="#shop")
-            a.header__shop-link(href="#") В магазин
+            a.header__shop-link(href="./market.html") В магазин
             +btn('btn--transparent header__btn') Опубликовать
             .header__select.select.none(id='header-select')
                 input(type="hidden" class="hidden-input")
@@ -32,5 +32,5 @@ header.header
             .burger-menu__shop
                 svg.header__shop-icon(width="32" height="33" viewBox="0 0 32 33")
                     use(xlink:href="#shop")
-                a.header__shop-link(href="#") В магазин
+                a.header__shop-link(href="./market.html") В магазин
             +btn('btn--transparent header__btn') Опубликовать
