--- a/UNKILL/src/pages/index.pug
+++ b/UNKILL/src/pages/index.pug
@@ -26,31 +26,31 @@ include ../components/mixins/tag
       .container
          h2.section__title Наши книги
          .books
-            +bookCard(false, '1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
-            +bookCard(false, '2', 'Страхование жизни: тарифы и резевы взносов. Финансовые основы страхования жизни', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
-            +bookCard(false, '3', 'Экономика страхования и перестрахования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
-            +bookCard(false, '4', 'Общества взаимного страхования', 'К.Е. Турбина · В.Н. Дядьков', ['аудио', 'аудио'], false, null)
-            +bookCard(false, '5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
-            +bookCard(false, '6', 'Транспортное страхование в России и странах Балтии', 'В.Н. Томилин', ['текст', 'аудио'], false, null)
-            +bookCard(false, '7', 'Финансовое управление в страховых компаниях (перевод с английского)', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
-            +bookCard(false, '8', 'Введение в продажу страхования или как научиться продавать надежду', 'Р.Т. Юлдашев', ['текст', 'аудио'], false, null)
+            +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
+            +bookCard('2', 'Страхование жизни: тарифы и резевы взносов. Финансовые основы страхования жизни', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
+            +bookCard('3', 'Экономика страхования и перестрахования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
+            +bookCard('4', 'Общества взаимного страхования', 'К.Е. Турбина · В.Н. Дядьков', ['аудио', 'аудио'], false, null)
+            +bookCard('5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
+            +bookCard('6', 'Транспортное страхование в России и странах Балтии', 'В.Н. Томилин', ['текст', 'аудио'], false, null)
+            +bookCard('7', 'Финансовое управление в страховых компаниях (перевод с английского)', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
+            +bookCard('8', 'Введение в продажу страхования или как научиться продавать надежду', 'Р.Т. Юлдашев', ['текст', 'аудио'], false, null)
          .swiper.book-slider.none
             .swiper-wrapper
                .swiper-slide.book-slide
-                  +bookCard(false, '1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
+                  +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
                .swiper-slide.book-slide
-                  +bookCard(false, '2', 'Страхование жизни: тарифы и резевы взносов. Финансовые основы страхования жизни', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
+                  +bookCard('2', 'Страхование жизни: тарифы и резевы взносов. Финансовые основы страхования жизни', 'Издательство «Анкил»', ['аудио', 'аудио'], false, null)
                .swiper-slide.book-slide 
-                  +bookCard(false, '3', 'Экономика страхования и перестрахования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
+                  +bookCard('3', 'Экономика страхования и перестрахования', 'Издательство «Анкил»', ['текст', 'аудио'], false, null)
                .swiper-slide.book-slide 
-                  +bookCard(false, '4', 'Общества взаимного страхования', 'К.Е. Турбина · В.Н. Дядьков', ['аудио', 'аудио'], false, null)
+                  +bookCard('4', 'Общества взаимного страхования', 'К.Е. Турбина · В.Н. Дядьков', ['аудио', 'аудио'], false, null)
                .swiper-slide.book-slide 
-                  +bookCard(false, '5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
+                  +bookCard('5', 'Введение в перестрахование', 'Кристоф Пфайффер', ['текст', 'аудио'], false, null)
                .swiper-slide.book-slide.book-slide--center
                   span.btn.book-slide-btn →
-                  a.book-slide-link(href="/") Смотреть все
+                  a.book-slide-link(href="./market.html") Смотреть все
          .el-center
-            a.btn.book-btn(href="/") Смотреть всё →
+            a.btn.book-btn(href="./market.html") Смотреть всё →
    section.section.blue
       .blue__content
          svg.blue__icon(width="58" height="58" viewBox="0 0 58 58")
