--- a/ECONOMIC DATA/src/components/header.pug
+++ b/ECONOMIC DATA/src/components/header.pug
@@ -1,6 +1,6 @@
 header.header
-  .header__container
-    a.header__logo(href='/')
+  .container.header__container
+    a.header__logo(href='index.html')
       svg.header__svg(width="213" height="54" viewBox="0 0 213 54")
         use(xlink:href="#logo")
 
