--- a/ECONOMIC DATA/src/pages/index.pug
+++ b/ECONOMIC DATA/src/pages/index.pug
@@ -1,8 +1,115 @@
 include ../components/mixins/page
+include ../components/mixins/btn
 
 +page('Главная', 'index-page', true)
 
-    .container                
-       
+    section.hero(id='hero')
+        .container.hero__container
+            h1.hero__title Здесь ваш ИИ станет умнее            
+            p.hero__dscr 10 000 качественных статей по экономике для обучения искусственного интеллекта
+            .hero__btns
+                +btn('hero__btn btn--white') Скачать архив
+                    svg.black-arrow(width="18" height="18" viewBox="0 0 18 18")
+                        use(xlink:href="#blackArrow")
+                +btn(null) Посмотреть статьи
+                    svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
+                        use(xlink:href="#whiteArrow")
+    section.about
+        .container
+            h2.section__title.about__title Economic Data - это
+            p.about__dscr Полный набор информации для экономического обучения ИИ - архив из 10 000 статей в формате PDF
+            +btn('about__btn') Скачать архив
+                svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#whiteArrow")
+    section.section.reason
+        .container
+            h2.section__title.reason__main-title 3 причины скачать архив
+            .reason__grid
+                .reason__card
+                    svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
+                        use(xlink:href="#reasonIcon1")
+                    h3.reason__title Анализ актуальных данных
+                    p.reason__dscr Доступ к закрытым статьям из ведущих экономических журналов повысит точность прогнозов ИИ
+                .reason__card
+                    svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
+                        use(xlink:href="#reasonIcon2")
+                    h3.reason__title Адаптация в условиях переменчивости
+                    p.reason__dscr Переработав разнообразную информацию, ваш ИИ сможет адаптироваться к новым условиям
+                .reason__card
+                    svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
+                        use(xlink:href="#reasonIcon3")
+                    h3.reason__title Инновационные подходы
+                    p.reason__dscr На основе знаний лучших авторов в области экономики, ваш ИИ сможет создавать новые методы анализа
+    section.section.action
+        .container.action__container
+            img.action__img(src="./assets/images/action.png", alt="Картинка")
+            .action__text
+                h2.section__title.action__title оставляйте заявку
+                p.action__dscr Вы получите архив из 10 000 статей из экономических и юридических журналов, которых нет в открытом доступе
+                +btn('about__btn') Скачать архив
+                    svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
+                        use(xlink:href="#whiteArrow")
+    section.section.article
+        svg.article__icon-left(width="608" height="97" viewBox="0 0 608 97")
+            use(xlink:href="#articleArrow1")
+        svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+            use(xlink:href="#articleArrow2")
+        .container
+            .section__header
+                h2.section__title.article__title Посмотрите примеры статей
+                .article__card
+                    p.article__dscr The Dynamics of Digital Disruption: Navigating New Markets
+            .article__row
+                .article__card
+                    p.article__dscr Rethinking Supply Chain Resilience: Lessons from Recent Crises
+                .article__card
+                    p.article__dscr The Role of AI and Automation in Labor Market Evolution
+            .article__row.article__row--space
+                .article__card
+                    p.article__dscr Inflation Trends and Monetary Policy Shifts: A Comparative Analysis
+                .article__card
+                    svg.article__icon-card(width="188" height="128" viewBox="0 0 188 128")
+                        use(xlink:href="#articleArrow3")
+                    p.article__dscr Sustainable Growth Strategies in a Globalized Economy
+    section.section.step
+        .container
+            h2.section__title.step__title Всё очень просто
+            .step__grid
+                .step__card
+                    p.step__number 01
+                    svg.step__icon(width="173" height="141" viewBox="0 0 173 141")
+                        use(xlink:href="#stepIcon1")
+                .step__card
+                    p.step__number 02
+                    svg.step__icon(width="200" height="200" viewBox="0 0 200 200")
+                        use(xlink:href="#stepIcon2")
+                .step__card
+                    p.step__number 03
+                    svg.step__icon(width="200" height="200" viewBox="0 0 200 200")
+                        use(xlink:href="#stepIcon3")
+            .step__grid.mb0
+                p.step__dscr Заполните заявку в форме ниже
+                p.step__dscr Получите счёт и оплатите архив
+                p.step__dscr Вышлем вам полный архив на почту
+    section.request
+        svg.request__icon-right(width="602" height="150" viewBox="0 0 602 150")
+            use(xlink:href="#requestArrow1")
+        svg.request__icon-left(width="602" height="150" viewBox="0 0 602 150")
+            use(xlink:href="#requestArrow2")
+        svg.request__icon-bottom(width="150" height="655" viewBox="0 0 150 655")
+            use(xlink:href="#requestArrow3")
+        .request__block
+            .request__content
+                p.request__dscr Заполните форму
+                h3.request__title Получите архив уже сейчас
+                form.request__form(action="/")
+                    input.request__input(type="text", name="name", placeholder='Имя')
+                    input.request__input(type="email", name="mail", placeholder='Email')
+                    input.request__input.request__input--mb(type="text", name="tel", placeholder='Телефон')
+                    button.btn.request__btn(type="submit")  Отправить заявку
+                        svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
+                            use(xlink:href="#whiteArrow")
+                    
+
 
 
