--- a/ECONOMIC DATA/src/styles/colors.scss
+++ b/ECONOMIC DATA/src/styles/colors.scss
@@ -1,10 +1,13 @@
 :root {
-    --main: #0200BF;
-    --main--active: #003cff;
-    --bg: #E3E3E3;
-    --black: #2E2E2E;
-    --white: #FFF;
-    --grey: #A0A0A0;
+    --bg-black: #0B0B0B;
+    --card-bg: #343434;
+    --black: #000;
+    --white: #FFFFFF;
+    --text-grey: #94A2B8;
+    --main-blue: #2699FF;
+    --input-border: #C9C9C9;
+    --input-text: #ECECEC;
+    --gradient: linear-gradient(131deg, #3246F7 0%, #478DF7 100%);
 }
 
 
