--- a/ECONOMIC DATA/src/styles/mixins.scss
+++ b/ECONOMIC DATA/src/styles/mixins.scss
@@ -7,3 +7,43 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin text-L {
+    font-family: Onest;
+    font-size: rem(28);
+    font-weight: 400;
+    line-height: 150%;
+    color: var(--white);
+}
+
+@mixin text-XL {
+    font-family: Onest;
+    font-size: rem(32);
+    font-weight: 700;
+    line-height: 120%;
+    color: var(--white);
+}
+
+@mixin text-S {
+    font-family: Onest;
+    font-size: rem(20);
+    font-weight: 400;
+    line-height: 150%;
+    color: var(--text-grey);
+}
+
+@mixin middle-title {
+    font-family: Pixar;
+    font-size: rem(48);
+    font-weight: 400;
+    line-height: 120%;
+    color: var(--white);
+}
+
+@mixin section-title {
+    font-family: Pixar;
+    font-size: rem(80);
+    font-weight: 400;
+    line-height: 120%;
+    color: var(--white);
+}
